--- a/css/main.css
+++ b/css/main.css
@@ -3,8 +3,106 @@ Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
-
+html,
 body {
+  width: 100%;
+  height: 100%;
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+}
+html {
+  box-sizing: border-box;
+}
+.container-azul {
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat;
+  background-size: cover;
+  height: 280px;
+}
+.right-section {
+  width: 60%;
+  float: right;
+}
+.login {
+  float: right;
+  display: inline-block;
+  border: 1px solid #1c5380;
+  background-color: #6f97b6;
+  margin: 130px 370px 0px 0px;
+  font-weight: bold;
+  background: rgb(28, 83, 128);
+  background: linear-gradient(
+    0deg,
+    rgba(28, 83, 128, 1) 0%,
+    rgba(255, 255, 255, 0.3) 100%
+  );
+  border-radius: 4px;
+}
+.cta-login {
+  float: right;
+  padding: 5px 10px;
+  margin: 0px;
+  color: white;
+  font-weight: bold;
+}
+.home {
+  float: left;
+  margin: 0px;
+  padding: 5px 10px;
+}
+.frame {
+  background-image: url("../images/frame.png");
+  background-repeat: no-repeat;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: flex-start;
+  width: 50em;
+}
+.text-area {
+  position: relative;
+  width: 55%;
+  margin-left: 30px;
+}
+.title {
+  color: rgb(18, 50, 85);
+}
+.badges {
+  display: flex;
+  flex-flow: row-reverse;
+  margin-right: 500px;
+}
+.badges img {
+  padding-left: 20px;
+}
+.brand {
+  float: left;
+  margin-top: 110px;
+}
+.left-section {
+  width: 40%;
+  float: left;
+}
+.phones {
+  float: left;
+  margin-left: 160px;
+  margin-top: 100px;
+}
+footer {
+  clear: both;
+  display: flex;
+}
+.footer-links {
+  list-style: none;
+  margin-left: 21%;
+}
+li {
+  padding: 10px;
+  display: inline-block;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 10px;
+  color: #6f97b6;
+}
+.date {
+  color: rgb(220, 220, 220);
 }
